# DrumBreakGenerator

./: .gitignore  CMakeLists.txt  README.md
src/: drumBreakGenerator.cpp  generator.cpp  generator.hpp  main.cpp  midi.cpp  midi.h  midi.hpp
test/: generatorTest.cpp  midiTest.cpp
